# sp1-safe

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  eth_getProof.sh  eth_getStorageAt.sh  msgHash.js  proposeSignMsg.js
.github/workflows/: ci.yml
lib/auxiliary/: msgHash.js  package.json  proposeSignMsg.js
lib/basics/: Cargo.toml
lib/basics/src/: lib.rs
lib/basics2/: Cargo.toml
lib/basics2/src/: lib.rs
lib/eip1186-verify/: Cargo.toml
lib/eip1186-verify/src/: lib.rs
lib/ethereum-trie/: Cargo.toml
lib/ethereum-trie/src/: lib.rs  storage_proof.rs  tests.rs
lib/fetch/: Cargo.toml
lib/fetch/src/: lib.rs
lib/fetch2/: Cargo.toml
lib/fetch2/src/: aerius.rs  lib.rs
lib/merkle-patricia-tree/: Cargo.toml  README.md  rustfmt.toml
lib/merkle-patricia-tree/src/: lib.rs  nibbles.rs  node.rs  trie.rs
lib/primitives/: Cargo.toml  lib.rs
lib/primitives/src/: lib.rs
lib/sp1-ethereum-trie/: Cargo.toml
lib/sp1-ethereum-trie/src/: lib.rs  node_codec.rs  storage_proof.rs  tests.rs
lib/utils/: Cargo.toml
program/: Cargo.toml
program/src/: main.rs  util.rs
program2/: Cargo.toml
program2/src/: main.rs
script/: Cargo.toml  build.rs
script/src/: main.rs  util.rs
script/src/wasm/: Cargo.toml  README.md
script/src/wasm/src/: lib.rs
script2/: Cargo.toml  build.rs
script2/src/: main.rs
server/: Cargo.toml  Rocket.toml  sp1-safe-server.service  test.sh
server/src/: main.rs
server2/: Cargo.toml  test.sh
server2/src/: main.rs
verifier/: Cargo.toml
verifier/src/: main.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
