[workspace]
[package]
version = "0.1.0"
name = "sp1-safe-script"
edition = "2021"

[dependencies]
const-hex = "1.11.1"
sp1-core = { git = "https://github.com/succinctlabs/sp1.git", tag = "nightly-5fa44d6589a4612fda531a119dad030e88f84015" }
sp1-safe-basics = { path = "../lib/basics" }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

ethers = "2.0.13"
serde = { version = "1.0.196", features = ["derive"], default-features = false }
tiny-keccak = { version = "2.0.2", features = ["keccak"], git = "https://github.com/sp1-patches/tiny-keccak.git" }
zerocopy = "0.7.32"
rlp = { version = "0.5", features = ["derive"] }

bincode = "1.3.3" #TMP

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", tag = "nightly-5fa44d6589a4612fda531a119dad030e88f84015" }