[package]
version = "0.1.0"
name = "sp1-safe-script"
edition = "2021"

[dependencies]
bincode = "1.3.3"
const-hex = "1.11.1"
serde = { version = "1.0.196", features = ["derive"], default-features = false }
serde_json = "1.0.114"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.5-testnet", features = ["plonk", "neon"] }
sp1-safe-basics = { path = "../lib/basics" }
sp1-safe-fetch = { path = "../lib/fetch" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak.git", branch = "patch-v2.0.2", features = ["keccak"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.5-testnet" }