[package]
name = "sp1-safe-server"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
const-hex = "1.11.1"
log = "0.4.21"
pretty_env_logger = "0.5.0"
rocket = {version = "0.5.0", features = ["json"] }
sp1-core = { git = "https://github.com/succinctlabs/sp1.git", tag = "nightly-5fa44d6589a4612fda531a119dad030e88f84015" }
sp1-safe-basics = { path = "../lib/basics" }
sp1-safe-fetch = { path = "../lib/fetch" }