[package]
name = "eip1186-verify"
version = "0.1.0"
edition = "2021"
description = "Ethereum EIP-1886 verifier"
authors = ["chiefbiiko"]

[dependencies]
# alloy-rlp = { version = "0.3", features = ["arrayvec"] }
alloy-trie = { version = "0.3", features = ["serde"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
# tiny-keccak = { version = "2.0.2", features = ["keccak"], optional = true, git = "https://github.com/sp1-patches/tiny-keccak.git" }
alloy-primitives = "0.6.4"
[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.3.4"