[package]
name = "merkle-patricia-tree"
version = "0.1.0"
authors = ["allemanfredi <alle.manfredi@gmail.com>"]
edition = "2018"
description = "Client to use Iota APIs"
repository = "https://github.com/allemanfredi/merkle-patricia-tree"
homepage = "https://github.com/allemanfredi/merkle-patricia-tree"
license = "MIT"
keywords = ["ethereum", "rust", "merkle patricia tree", "rlp", "keccak256"]

[lib]
name = "merkle_patricia_tree"
path = "./src/lib.rs"

[dependencies]
rlp = "0.4.5"
sha3 = "0.8.2"
