[package]
name = "sp1-ethereum-trie"
version = "0.1.0"
edition = "2021"
description = "Ethereum EIP-1886 layout implementation for parity/trie"
authors = ["Polytope Labs <hello@polytope.technology>"]


[dependencies]
# trie-db = { workspace = true }
# hash-db = {  workspace = true }
# memory-db = {  workspace = true }
# codec = { workspace = true, features = ["derive"] }
trie-db = { version = "0.28.0", default-features = false }
hash-db = { version = "0.16.0", default-features = false }
memory-db = { version = "0.32.0", default-features = false }
# FIXME trash codec
codec = { version = "3.1.3", package = "parity-scale-codec", default-features = false, features = ["derive"] }

# TODO try use alloy-rlp
rlp = { version = "0.5.1", default-features = false }
primitive-types = { version = "0.12.0", default-features = false }
hash256-std-hasher = { version = "0.15.2", optional = true }
tiny-keccak = { version = "2.0.2", features = ["keccak"],  optional = true }
# tiny-keccak = { version = "2.0.2", features = ["keccak"], git = "https://github.com/sp1-patches/tiny-keccak.git", branch = "master",  optional = true }

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.3.4"
primitive-types = { version = "0.12.0", features = ["rlp"] }
rlp-derive = "0.1.0"

[features]
default = ["std"]
std = [
    "tiny-keccak",
    "hash256-std-hasher",
    "trie-db/std",
    "hash-db/std",
    "rlp/std",
    "primitive-types/std",
    "codec/std"
]