[workspace]
[package]
version = "0.1.0"
name = "sp1-safe-script-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

sp1-core = { git = "https://github.com/succinctlabs/sp1.git", tag = "nightly-9504acd329f9d40824e49e16c517911cbc26c842" }
bincode = "1.3.3"

wasm-bindgen-test = "0.3.34"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# [dev-dependencies]
# wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true